2023-01-13 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSURLSession.h:
	* Source/NSURLSession.m:
	Add missing NSURLSession APIs.

2022-02-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: ([GSMimeHeader setValue:]) do not set
	type/subtype information if the content-type header value  is not
	in that format.

2022-01-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: fix incorrect close of socket at the end
	of a successful request.

2022-01-08 Richard Frith-Macdonald <rfm@gnu.org>

	* ChangeLog: Update for new release
	* ANNOUNCE:
	* NEWS:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Update release notes for 1.29.0 release.
	* Version: bump to 1.29.0

2022-12-28 Richard Frith-Macdonald <rfm@gnu.org>

	* ChangeLog: Update for new release
	* ANNOUNCE:
	* NEWS:
	* NSTimeZones/NSTimeZones.tar: update
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Update release notes for 1.28.1 release.
	* Version: bump to 1.28.1

2022-12-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: do not process end tag if parsing was aborted
	while processing start tag.

2022-11-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Use the https_proxy and http_proxy
	environment variables if no proxying is specified. Also support
	those keys as properties in the request (overriding the environment
	variables) and support the URL protection space if set.

2022-11-26 Fred Kiefer <fredkiefer@gmx.de>

	* Source/Additions/GSXML.m: Remove usage of deprecated function
	when a newer version of libxml is used.

2022-11-25  Florian Weimer

	* config/config.poll-dev.c:
	* config/config.proccmd.c:
	* config/config.reuseaddr.c:
	* config/config.vasprintf.c:
	* config/config.vsprintf.c:
	Make config tests work with C99 compiler

2022-11-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSFileManager.m: